--- a/.github/workflows/latex_resume.yml
+++ b/.github/workflows/latex_resume.yml
@@ -1,10 +1,10 @@
 name: Build LaTeX document
-
 on:
   push:
     paths-ignore:
-      - 'resume.jpg'
-
+      - 'resume.png'
+      - 'main.pdf'
+      - '**.md'
 jobs:
   build_latex:
     runs-on: ubuntu-latest
@@ -26,30 +26,56 @@ jobs:
           name: PDF
           path: main.pdf
       
-      - name: Install ghostscript & ImageMagick
-        run: sudo apt-get update --fix-missing && sudo apt install ghostscript imagemagick -y
+      - name: Get Time
+        id: time
+        uses: nanzm/get-time-action@v1.1
+        with:
+          timeZone: -7
+          format: 'YYYY-MM-DD-HH-mm-ss'
       
-      - name: Convert PDF to JPG
-        run: convert -density 300 -background white -alpha remove main.pdf -quality 90 resume.jpg
+      - name: Install ghostscript
+        run: sudo apt-get update --fix-missing && sudo apt install ghostscript
       
-      - name: Commit JPG
+      - name: Change ImageMagick security policy
+        run: |
+          DQT='"' 
+          SRC="rights=${DQT}none${DQT} pattern=${DQT}PDF${DQT}"
+          RPL="rights=${DQT}read\|write${DQT} pattern=${DQT}PDF${DQT}"
+          
+          HGT="name=${DQT}height${DQT} value=${DQT}10KP${DQT}"
+          HGTR="name=${DQT}height${DQT} value=${DQT}128Kp${DQT}"
+          
+          WDT="name=${DQT}width${DQT} value=${DQT}10KP${DQT}"
+          WDTR="name=${DQT}width${DQT} value=${DQT}128Kp${DQT}"
+          
+          MAP="name=${DQT}map${DQT} value=${DQT}512MiB${DQT}"
+          MAPR="name=${DQT}map${DQT} value=${DQT}4GiB${DQT}"
+          
+          MEM="name=${DQT}memory${DQT} value=${DQT}256MiB${DQT}"
+          MEMR="name=${DQT}memory${DQT} value=${DQT}2GiB${DQT}"
+          
+          sudo sed -i "s/$SRC/$RPL/" /etc/ImageMagick-6/policy.xml
+          sudo sed -i "s/$HGT/$HGTR/" /etc/ImageMagick-6/policy.xml
+          sudo sed -i "s/$WDT/$WDTR/" /etc/ImageMagick-6/policy.xml
+          sudo sed -i "s/$MAP/$MAPR/" /etc/ImageMagick-6/policy.xml
+          sudo sed -i "s/$MEM/$MEMR/" /etc/ImageMagick-6/policy.xml
+      
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y imagemagick
+      
+      - name: Convert PDF to PNG
+        run: convert -density 900 -background white -alpha off main.pdf -resize 25% -quality 90 -colorspace RGB resume.png
+      
+      - name: Commit PNG
         id: commit
         run: |
           git config --local user.email "action[bot]@github.com"
           git config --local user.name "github-actions[bot]"
-          git add resume.jpg
-          git commit -m "[bot] updated resume.jpg" || echo "No changes to commit"
+          git add resume.png main.pdf
+          git commit -m "[bot] updated resume.png and main.pdf" || echo "No changes to commit"
       
-      - name: Update README with latest resume
-        run: |
-          echo "![Resume](resume.jpg)" > README.md
-          git add README.md
-          git commit -m "[bot] Updated README with latest resume" || echo "No changes to commit"
-
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.TOKEN_GITHUB }}
           branch: ${{ github.ref_name }}
-
-          
